// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initPGService pg should work with envname 1`] = `[]`;

exports[`initPGService pg should work without envname 1`] = `
[
  [
    "warning",
    "⚠️ - Setting the password in the PG config is unsafe.",
  ],
  [
    "warning",
    "🐘 - Initializing PG service...",
  ],
]
`;

exports[`initPGService should work with Knifecycle 1`] = `
[
  [
    "warning",
    "🐘 - Initializing PG service...",
  ],
]
`;
